Reduce sleep duration in message handling and update connection pool settings